# Comfy-UmiAI

./: .gitignore  README.md  __init__.py  missing_models.txt  models_manifest.json  nodes.py  nodes_camera.py  nodes_caption.py  nodes_character.py  nodes_dataset.py  nodes_lite.py  nodes_model_manager.py  nodes_power.py  nodes_qwen_detailer.py  nodes_qwen_encoder.py  nodes_sheet_crop.py  nodes_sheet_tools.py  pyproject.toml  requirements.txt  shared_utils.py  umi_settings.json
.github/workflows/: publish.yml
characters/Sakura/: profile.yaml
characters/elena/: profile.yaml
characters/kai/: profile.yaml
emotions-config/: emotions.json
js/: appearance.js  camera_angle_3d.js  character_creator.js  emotion_studio.js  file_editor.js  history_browser.js  image_browser.js  lora_browser.js  model_manager.js  model_selector.js  pose_editor.js  preset_manager.js  shortcuts_panel.js  syntax_highlight.js  theme_manager.js  umi_camera_widget.js  umi_wildcards.js  yaml_manager.js  zz_umi_rmbg_ui_cleanup.js
pose_utils/: __init__.py  advanced_renderer.py  bone_colors.py  pose_renderer.py  skeleton_512x1536.py
presets/: emotions.yaml  poses.yaml  scenes.yaml
scripts/: download_hf_models.ps1
wildcards/: backgrounds.txt  emotions.txt  lighting.txt  poses.txt
workflows/: camera_control.json  character_basic.json  character_batch.json  lora_dataset.json  umi_xl_hires.json
